--- a/frontend/app/templates/info.html
+++ b/frontend/app/templates/info.html
@@ -74,7 +74,7 @@
         <a href="http://localhost:8080/">Home</a>
         <a href="mood">Playlist</a>
         <a href="info">Info</a>
-        <a href="artist">Artist List</a>
+        <a href="artists">Artist List</a>
     </div>
     <div class="container">
         <h1>Dataset Overview</h1>
