--- a/frontend/app/templates/mood.html
+++ b/frontend/app/templates/mood.html
@@ -96,7 +96,7 @@
         <a href="http://localhost:8080/">Home</a>
         <a href="mood">Playlist</a>
         <a href="info">Info</a>
-        <a href="artist">Artist List</a>
+        <a href="artists">Artist List</a>
     </div>
     <div class="container">
     <h1>Select the Mood for Your Playlist</h1>
